# LA-BENCHER

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  build-scripts.txt  configure.ac  f4rt-config.in  f4rt.pc.in  la-bencher-config.in  la-bencher.pc.in
doc/: Doxyfile  Makefile.am  index.xml
m4/: ax_blas.m4  ax_cache_line_size.m4  ax_cache_size.m4  ax_cache_size_tune.m4  ax_ext.m4
scripts/: bench-atlas.py  bench-lapack.py  bench-plasma.py  bench-plot.py  bench-seq.py  bench.py  bench_old_version.py  benchmarks.py  experminental-results.py  plot.py  plot_old.py
scripts/hpac-results/test-0542733d41dc3fad430d7f8daeb04cd4/: bench-0542733d41dc3fad430d7f8daeb04cd4
scripts/hpac-results/test-0bc0c29185880d588865ca66f27cb26a/: bench-0bc0c29185880d588865ca66f27cb26a
scripts/hpac-results/test-0c6167fa5e6a411ba1ccc04467658043/: bench-0c6167fa5e6a411ba1ccc04467658043
scripts/hpac-results/test-0eabbd0134be014ccaae88fbb41acbf6/: bench-0eabbd0134be014ccaae88fbb41acbf6
scripts/hpac-results/test-172a31f6869ae928d5fd875564293d12/: bench-172a31f6869ae928d5fd875564293d12
scripts/hpac-results/test-1853952f8e0822a3d723ddf3f193529d/: bench-1853952f8e0822a3d723ddf3f193529d
scripts/hpac-results/test-1b34096c9ddfe9f97f577d8fd5426372/: bench-1b34096c9ddfe9f97f577d8fd5426372
scripts/hpac-results/test-2293fd294e7b9cda7917462ac4896225/: bench-2293fd294e7b9cda7917462ac4896225
scripts/hpac-results/test-23a024f88e16bfe2c081b8bc6c1a55fd/: bench-23a024f88e16bfe2c081b8bc6c1a55fd
scripts/hpac-results/test-275fe6778ea75fa82c7ed306a46dedcd/: bench-275fe6778ea75fa82c7ed306a46dedcd
scripts/hpac-results/test-2d4c71d3fce637caf2b5f77d3ec28189/: bench-2d4c71d3fce637caf2b5f77d3ec28189
scripts/hpac-results/test-2dc676ce76940ff92aeede7986982a33/: bench-2dc676ce76940ff92aeede7986982a33
scripts/hpac-results/test-2f31301fe1bc70288261ed9ca7b8d773/: bench-2f31301fe1bc70288261ed9ca7b8d773
scripts/hpac-results/test-2fe393198ca9b69380d312ee1499ab86/: bench-2fe393198ca9b69380d312ee1499ab86
scripts/hpac-results/test-31743d5596b073410d337416c9625aea/: bench-31743d5596b073410d337416c9625aea
scripts/hpac-results/test-3897123316a481f8cc9fd0b69360759f/: bench-3897123316a481f8cc9fd0b69360759f
scripts/hpac-results/test-3dc6a02296786c0392015aef12a29a53/: bench-3dc6a02296786c0392015aef12a29a53
scripts/hpac-results/test-4220106291937c3a53f6557a310accaf/: bench-4220106291937c3a53f6557a310accaf
scripts/hpac-results/test-474d680e0150f90bef60a21cd553a225/: bench-474d680e0150f90bef60a21cd553a225
scripts/hpac-results/test-4982d17f784d5fb6d69d09e88f6579ed/: bench-4982d17f784d5fb6d69d09e88f6579ed
scripts/hpac-results/test-4c4cb98080bebfaf37835726a95ff2cd/: bench-4c4cb98080bebfaf37835726a95ff2cd
scripts/hpac-results/test-4dc540da9bd7bce8aebf610c2f136f69/: bench-4dc540da9bd7bce8aebf610c2f136f69
scripts/hpac-results/test-51d3f2a8d892865ca3d400fb3ed83585/: bench-51d3f2a8d892865ca3d400fb3ed83585
scripts/hpac-results/test-54809eaf8bca78591628d7184fa50c89/: bench-54809eaf8bca78591628d7184fa50c89
scripts/hpac-results/test-5a0c1287c6b234193127ce6804a8c223/: bench-5a0c1287c6b234193127ce6804a8c223
scripts/hpac-results/test-5cd1780b14323836374efdba06c82227/: bench-5cd1780b14323836374efdba06c82227
scripts/hpac-results/test-5d1db3ad32028110fb00be250a70a82e/: bench-5d1db3ad32028110fb00be250a70a82e
scripts/hpac-results/test-5d813d691a636708a9738cba91edb532/: bench-5d813d691a636708a9738cba91edb532
scripts/hpac-results/test-5fcbd141298dbb67a5584359c6e3e831/: bench-5fcbd141298dbb67a5584359c6e3e831
scripts/hpac-results/test-620657d7246acc7cbedb3cc03c351140/: bench-620657d7246acc7cbedb3cc03c351140
scripts/hpac-results/test-6ea96d6a7c3548fcca59d1f2a7d18907/: bench-6ea96d6a7c3548fcca59d1f2a7d18907
scripts/hpac-results/test-773645f37ae809bdebe99aa2aa693219/: bench-773645f37ae809bdebe99aa2aa693219
scripts/hpac-results/test-788c0d1b5ffb4c3eee1567b5996eb240/: bench-788c0d1b5ffb4c3eee1567b5996eb240
scripts/hpac-results/test-78b8e7d29e1f012f28ecfdbeb90d52b7/: bench-78b8e7d29e1f012f28ecfdbeb90d52b7
scripts/hpac-results/test-7aa0201f05ab3aa5bfb04dfc14e06021/: bench-7aa0201f05ab3aa5bfb04dfc14e06021
scripts/hpac-results/test-801bb68caea01002781cc8e3d38c4409/: bench-801bb68caea01002781cc8e3d38c4409
scripts/hpac-results/test-854fd74bb9be69eb7a29f0345bc8e241/: bench-854fd74bb9be69eb7a29f0345bc8e241
scripts/hpac-results/test-874a70957336602a2bb42ff213853e11/: bench-874a70957336602a2bb42ff213853e11
scripts/hpac-results/test-88bbed748c4c752bb569c622e349a26c/: bench-88bbed748c4c752bb569c622e349a26c
scripts/testtest-512/: bench-513ed09fe6
src/: Makefile.am  dense-mat-mult.cpp  dense-mat-mult.h  dense-matrix-mult-omp.cpp  dense-matrix-mult-tbb.cpp  dense-matrix-mult.cpp  dense-matrix.cpp  dense-mult-omp  dense-mult-tbb  dense_mult-matrix-seq.asm  f4rt-kaapi.cpp  f4rt-kaapi.h  f4rt-omp.cpp  f4rt-omp.h  f4rt-pthread.cpp  f4rt-pthread.h  f4rt-seq.cpp  f4rt-seq.h  f4rt-tbb.cpp  f4rt-tbb.h  f4rt.cpp  f4rt.h  gauss.cpp  intrinsics.c  intrinsics.h  la-bencher.cpp  la-bencher.h  mat-elim-tools.c  mat-elim-tools.cpp  mat-elim-tools.h  mat-elim.cpp  mat-elim.h  mat-gen.cpp  mat-gen.h  mat-mult.cpp  mat-mult.h  matrix-kaapi.cpp  matrix-kaapi.h  matrix-omp.cpp  matrix-omp.h  (+10 more)
src/blas/: mat-elim-blas.c  mat-elim-blas.cpp  mat-elim-blas.h
src/cblas/: mat-elim-cblas.h
src/kaapi/: mat-elim-kaapi.c  mat-elim-kaapi.cpp  mat-elim-kaapi.h  mat-mult-kaapi.cpp  mat-mult-kaapi.h
src/omp/: mat-elim-omp.cpp  mat-elim-omp.h  mat-mult-omp.cpp  mat-mult-omp.h
src/pthrd/: mat-elim-pthrd.cpp  mat-elim-pthrd.h  mat-mult-pthrd.cpp  mat-mult-pthrd.h
src/seq/: mat-elim-seq.cpp  mat-elim-seq.h  mat-mult-seq.cpp  mat-mult-seq.h
src/tbb/: mat-elim-tbb.cpp  mat-elim-tbb.h  mat-mult-tbb.cpp  mat-mult-tbb.h
tests/: Makefile.am  run-all-tests.sh  run-basic-tests.sh  run-unit-tests.sh
tests/basic/: Makefile.am
tests/data/: Makefile.am
tests/unit/: Makefile.am  _add_mm128_epi32.c  _dense_mat_check.cpp  _dense_mat_copy.cpp  _dense_mat_transpose.cpp  _mullo_mm128_epi32.c
(+53 files in other folders)
